[gd_scene load_steps=16 format=3 uid="uid://dscxljxdt3y5q"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_xotca"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ColourPicker/PickerPanel.gd" id="2_5qwg5"]
[ext_resource type="StyleBox" uid="uid://bubm5sx3xn6q5" path="res://Resources/Themes/TitleLabel.tres" id="3_6n4k7"]
[ext_resource type="FontFile" uid="uid://cq27s0444iwkg" path="res://Textures/Fonts/ConnectionIi-2wj8.otf" id="3_p5j7l"]
[ext_resource type="Texture2D" uid="uid://l0tmxxp6t7bs" path="res://Textures/UI/ColourPicker/picker_bar.png" id="3_yuseo"]
[ext_resource type="Texture2D" uid="uid://xmlsqgppxb1i" path="res://Textures/UI/ColourPicker/picker.png" id="4_idovu"]
[ext_resource type="Texture2D" uid="uid://ci1qrp3pyqm6h" path="res://Textures/Buttons/icons/close.png" id="5_6ue4d"]
[ext_resource type="PackedScene" uid="uid://crjli3vncl5g7" path="res://Scenes and Scripts/UI/ColourPicker/colour_sampler.tscn" id="5_8vrca"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="6_kwlog"]
[ext_resource type="Texture2D" uid="uid://cgfs1pdopjbh" path="res://Textures/Buttons/icons/close_hover.png" id="6_ytwn5"]
[ext_resource type="Script" path="res://Scenes and Scripts/Classes/line_edit.gd" id="7_85uwg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xak16"]
resource_local_to_scene = true
shader = ExtResource("6_kwlog")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7k5dl"]

[sub_resource type="FontVariation" id="FontVariation_f0v4l"]
base_font = ExtResource("3_p5j7l")
spacing_bottom = -4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_atfhl"]

[node name="ColourPickerPanel" type="Control" node_paths=PackedStringArray("GrabAreas")]
material = ExtResource("1_xotca")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_5qwg5")
GrabAreas = [NodePath("VBoxContainer/TitleContainer"), NodePath("VBoxContainer/PanelContainer")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
theme_override_constants/separation = -166

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/margin_bottom = -8

[node name="ColorPicker" type="ColorPicker" parent="VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/sv_width = 100
theme_override_constants/sv_height = 100
theme_override_constants/h_width = 15
theme_override_icons/bar_arrow = ExtResource("3_yuseo")
theme_override_icons/picker_cursor = ExtResource("4_idovu")
edit_alpha = false
color_mode = 1
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="ColourSampler" parent="VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("5_8vrca")]
material = SubResource("ShaderMaterial_xak16")
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7k5dl")

[node name="HexContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HexContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Hex:"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/VBoxContainer/HexContainer"]
use_parent_material = true
custom_minimum_size = Vector2(82, 19)
layout_mode = 2
theme_override_font_sizes/font_size = 8
placeholder_text = "[Enter Hex]"
alignment = 1
max_length = 6
script = ExtResource("7_85uwg")

[node name="TitleContainer" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("3_6n4k7")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 3

[node name="Title" type="Label" parent="VBoxContainer/TitleContainer/HBoxContainer"]
y_sort_enabled = true
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontVariation_f0v4l")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_atfhl")
text = "Colour Name"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TitleContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Close" type="TextureButton" parent="VBoxContainer/TitleContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_6ue4d")
texture_pressed = ExtResource("5_6ue4d")
texture_hover = ExtResource("6_ytwn5")

[connection signal="color_changed" from="VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="sample_submitted" from="VBoxContainer/PanelContainer/VBoxContainer/ColourSampler" to="." method="_on_colour_sampler_sample_submitted"]
[connection signal="text_submitted" from="VBoxContainer/PanelContainer/VBoxContainer/HexContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/TitleContainer/HBoxContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
